--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.1",
     "moment": "^2.24.0",
@@ -27,6 +29,7 @@
     "objection-password": "^2.0.0",
     "objection-unique": "^1.0.1",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pug": "^2.0.4",
     "validator": "^11.1.0"
