--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "es6-promisify": "^5.0.0",
     "pug": "^2.0.4",
     "validator": "^11.1.0"
   },
