--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "start": "npm run watch"
   },
   "dependencies": {
-    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "connect-session-knex": "^1.4.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
+    "es6-promisify": "^5.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "express-validator": "^6.1.1",
     "fs": "^0.0.1-security",
-    "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.1",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
@@ -29,9 +30,7 @@
     "objection-password": "^2.0.0",
     "objection-unique": "^1.0.1",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "es6-promisify": "^5.0.0",
     "pug": "^2.0.4",
     "validator": "^11.1.0"
   },
@@ -48,7 +47,6 @@
     "nodemon": "^1.19.1",
     "postcss-loader": "1.3.3",
     "sass-loader": "6.0.3",
-    "sequelize-cli": "^5.5.0",
     "webpack": "2.2.1"
   }
 }
